# rtsp-player

./: .gitignore  CMakeLists.txt  FrameQueue.h  README.md  Renderer.cpp  Renderer.h  check-error.h  create-shader.h  create-window.h  debug-message-handler.h  decode-thread.h  init-gl.h  load-texture.h  main.cpp  open-rtsp.h  print-info.h  render-scene.h  vertex-buffer.h
